force-app/zurich-base/main/default/objects/Scope__c/Scope__c.object-meta.xml
<CustomObject>
    <description>(ZE/OCS) Entidad utilizada para definir el ámbito al que aplican algunos de los campos de la cuenta. A su vez, se identifica la vía de contacto (email, telefono y dirección) principal para cada ámbito y se recupera para Marketing Cloud el email y teléfono principal.</description>
    <label>Scope</label>
    <nameField>
        <label>Scope Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scopes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>