force-app/zurich-base/main/default/objects/Scope__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <description>(ZE/OCS) Identifica la cuenta a la que está asociado el ámbito</description>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Scope</relationshipLabel>
    <relationshipName>Scope</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>