force-app/zurich-base/main/default/objects/Scope__c/fields/Contactable__c.field-meta.xml
<CustomField>
    <fullName>Contactable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>(ZE/OCS) Identifica si el contacto es contactable para un ámbito concreto.</description>
    <label>Contactable</label>
    <type>Checkbox</type>
</CustomField>