force-app/zurich-base/main/default/objects/Scope__c/fields/ContactPointAddressId__c.field-meta.xml
<CustomField>
    <fullName>ContactPointAddressId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>(ZE/OCS) Identifica la vía de contacto dirección postal principal asociada al ámbito.</description>
    <label>Contact Point Address Name</label>
    <referenceTo>ContactPointAddress</referenceTo>
    <relationshipLabel>Scope</relationshipLabel>
    <relationshipName>Scope</relationshipName>
    <type>Lookup</type>
</CustomField>