force-app/zurich-base/main/default/objects/Scope__c/fields/ContactPointEmailId__c.field-meta.xml
<CustomField>
    <fullName>ContactPointEmailId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>(ZE/OCS) Identifica la vía de contacto email principal asociada al ámbito.</description>
    <label>Contact Point Email Name</label>
    <referenceTo>ContactPointEmail</referenceTo>
    <relationshipLabel>Scope</relationshipLabel>
    <relationshipName>Scope</relationshipName>
    <type>Lookup</type>
</CustomField>