force-app/zurich-base/main/default/objects/Scope__c/fields/ContactPointPhone__c.field-meta.xml
<CustomField>
    <fullName>ContactPointPhone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>(ZE/OCS) Identifica la vía de contacto teléfono principal asociada al ámbito.</description>
    <label>Contact Point Phone</label>
    <referenceTo>ContactPointPhone</referenceTo>
    <relationshipLabel>Scope</relationshipLabel>
    <relationshipName>Scope</relationshipName>
    <type>Lookup</type>
</CustomField>