force-app/zurich-base/main/default/objects/Scope__c/fields/FirstWonQuoteDate__c.field-meta.xml
<CustomField>
    <fullName>FirstWonQuoteDate__c</fullName>
    <description>(ZE) Fecha de la primera oferta ganada de Zurich Empresas.</description>
    <label>First Won Quote Date</label>
    <type>Date</type>
</CustomField>