force-app/zurich-base/main/default/objects/Scope__c/fields/HashedId__c.field-meta.xml
<CustomField>
    <fullName>HashedId__c</fullName>
    <description>A hash generated when an scope is created to be used in the Preference center. So the client can unsubscribe from emails.</description>
    <label>HashedId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>