force-app/zurich-base/main/default/objects/Scope__c/fields/HasOptedOutOfEmail__c.field-meta.xml
<CustomField>
    <fullName>HasOptedOutOfEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>(ZE/OCS) Identifica si el contacto no quiere recibir comunicaciones por correo.</description>
    <label>Has Opted Out of Email</label>
    <type>Checkbox</type>
</CustomField>