force-app/zurich-base/main/default/objects/Scope__c/fields/LastContactableModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>LastContactableModifiedDate__c</fullName>
    <description>(ZE/OCS) Identifica la última vez que se ha modificado el campo HasOptedOutOfEmail__c.</description>
    <label>Last Contactable Modified Date</label>
    <type>DateTime</type>
</CustomField>