force-app/zurich-base/main/default/objects/Scope__c/fields/PrimaryEmail__c.field-meta.xml
<CustomField>
    <fullName>PrimaryEmail__c</fullName>
    <description>(ZE/OCS) Email principal necesario para las comunicaciones a través de Journey Builder</description>
    <label>Primary Email</label>
    <type>Email</type>
</CustomField>