force-app/zurich-base/main/default/objects/Scope__c/fields/PrimaryPhone__c.field-meta.xml
<CustomField>
    <fullName>PrimaryPhone__c</fullName>
    <description>(ZE/OCS) Teléfono principal necesario para las comunicaciones a través de Journey Builder</description>
    <label>Primary Phone</label>
    <type>Phone</type>
</CustomField>