force-app/zurich-base/main/default/objects/Scope__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <label>Scope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Z</fullName>
            </value>
            <value>
                <fullName>ZE</fullName>
            </value>
            <value>
                <fullName>ZEO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>