force-app/zurich-base/main/default/objects/Scope__c/fields/StartYear__c.field-meta.xml
<CustomField>
    <fullName>StartYear__c</fullName>
    <description>(ZE) Año de inicio de la actividad.</description>
    <label>Start Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>