force-app/zurich-base/main/default/objects/Scope__c/fields/TechnicalIncidence__c.field-meta.xml
<CustomField>
    <fullName>TechnicalIncidence__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[ZE]Campo que indica si una cuenta tiene alguna incidencia técnica</description>
    <label>Technical incidence</label>
    <type>Checkbox</type>
</CustomField>