force-app/zurich-base/main/default/objects/Scope__c/fields/TotalNetPremium__c.field-meta.xml
<CustomField>
    <fullName>TotalNetPremium__c</fullName>
    <description>(ZE) Prima total neta (sin impuestos) de todas las ofertas en curso de Zurich Empresas.</description>
    <label>Total Net Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>